[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/InteractiveObjects/Coin/Piece_HUD_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/Coin.gd" type="Script" id=2]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/PetitePieceShadow_SpriteSheet.png" type="Texture" id=3]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/Validation.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 8 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 8 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Rotation",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Rotation",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=23]
radius = 88.0

[sub_resource type="Gradient" id=24]
colors = PoolColorArray( 0.810699, 0.902344, 0, 1, 1, 0, 0, 0.384314 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="ParticlesMaterial" id=26]
flag_disable_z = true
direction = Vector3( -1, -150, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 25 )

[sub_resource type="Animation" id=27]
resource_name = "Wave"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CoinSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShadowSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1 ), Vector2( 0.8, 1 ) ]
}

[node name="Coin" type="Node2D"]
script = ExtResource( 2 )

[node name="ShadowSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, 18 )
frames = SubResource( 22 )
animation = "Idle"

[node name="CoinSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.5 )
frames = SubResource( 12 )
animation = "Idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 23 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
one_shot = true
process_material = SubResource( 26 )

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Wave = SubResource( 27 )

[node name="SpawnDurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="state_changed" from="." to="." method="_on_Coin_state_changed"]
[connection signal="animation_finished" from="CoinSprite" to="." method="_on_CoinSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_FollowArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnDurationTimer" to="." method="_on_SpawnDurationTimer_timeout"]
